ecmascript/parser/tests/typescript-errors/tsc/parser/ecmascript5/RegressionTests/parser509630/input.ts.stderr
error[1005]: Expected ']'
 --> $DIR/tests/typescript-errors/tsc/parser/ecmascript5/RegressionTests/parser509630/input.ts:2:23
  |
2 |     public examples = [ // typing here
  |                       ^

